--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 		"start": "astro dev",
 		"build": "astro build && npm run ucompress && npm run minify-html",
 		"ucompress": "ucompress --dest ./dist --source ./dist",
-		"minify-html": "html-minifier -c html-minifier.config.json --input-dir dist/ --output-dir dist/ --file-ext html"
+		"minify-html": "html-minifier -c .html-minifier.json --input-dir dist/ --output-dir dist/ --file-ext html"
 	},
 	"devDependencies": {
 		"@tailwindcss/aspect-ratio": "0.4.0",
 		"@tailwindcss/forms": "0.4.0",
+		"@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
 		"@tailwindcss/typography": "0.5.0",
 		"astro": "0.22.13",
 		"cssnano": "5.0.15",
