--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
 		"start": "astro dev"
 	},
 	"devDependencies": {
-		"@tailwindcss/aspect-ratio": "latest",
-		"@tailwindcss/forms": "latest",
-		"@tailwindcss/line-clamp": "latest",
-		"@tailwindcss/typography": "latest",
-		"astro": "latest",
-		"astro-compress": "latest",
-		"astro-critters": "latest",
-		"autoprefixer": "latest",
-		"cssnano": "latest",
-		"cssnano-preset-advanced": "latest",
-		"firebase": "latest",
-		"postcss": "latest",
-		"postcss-combine-duplicated-selectors": "latest",
-		"postcss-combine-media-query": "latest",
-		"postcss-import": "latest",
-		"postcss-reporter": "latest",
-		"postcss-url": "latest",
-		"tailwindcss": "latest"
+		"@tailwindcss/aspect-ratio": "0.4.0",
+		"@tailwindcss/forms": "0.5.2",
+		"@tailwindcss/line-clamp": "0.4.0",
+		"@tailwindcss/typography": "0.5.2",
+		"astro": "1.0.0-beta.31",
+		"astro-compress": "0.0.6",
+		"astro-critters": "0.0.7",
+		"autoprefixer": "10.4.7",
+		"cssnano": "5.1.9",
+		"cssnano-preset-advanced": "5.3.5",
+		"firebase": "9.8.1",
+		"postcss": "8.4.14",
+		"postcss-combine-duplicated-selectors": "10.0.3",
+		"postcss-combine-media-query": "1.0.1",
+		"postcss-import": "14.1.0",
+		"postcss-reporter": "7.0.5",
+		"postcss-url": "10.1.3",
+		"tailwindcss": "3.0.24"
 	}
 }
