--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@tailwindcss/line-clamp": "0.4.0",
 		"@tailwindcss/typography": "0.5.4",
 		"astro": "1.0.6",
-		"astro-compress": "workspace:*",
-		"astro-critters": "workspace:*",
+		"astro-compress": "1.0.2",
+		"astro-critters": "1.0.1",
 		"autoprefixer": "10.4.8",
 		"cssnano": "5.1.13",
 		"cssnano-preset-advanced": "5.3.8",
