--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "📄 Starter template for AstroJS.",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/SouqRs/souq.dev.git"
+		"url": "https://github.com/SouqRs/souq.dev.git"
 	},
 	"homepage": "https://github.com/SouqRs/souq.dev#readme",
 	"bugs": {
