--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"build": "astro build",
+		"build": "astro check && astro build",
 		"start": "astro dev"
 	},
 	"devDependencies": {
