--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "souq-web",
 	"version": "0.0.3",
-	"description": "📄 Starter template for AstroJS.",
+	"description": "",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/SouqRs/souq.dev.git"
