--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
 	"bugs": {
 		"url": "https://github.com/SouqRs/souq.dev/issues"
 	},
-	"author": {
-		"name": "Nikola Hristov",
-		"email": "nikola@lightrix.dev",
-		"url": "https://nikolahristov.tech"
-	},
+	"author": "lightrix",
 	"license": "MIT",
 	"private": true,
 	"scripts": {
