--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
 		"baseUrl": ".",
 		"moduleResolution": "bundler",
 		"paths": {
-			"@assets/*": ["Source/assets/*"],
-			"@components/*": ["Source/components/*"],
-			"@layouts/*": ["Source/Layout/*"],
+			"@Asset/*": ["Source/Asset/*"],
+			"@Component/*": ["Source/Component/*"],
+			"@Layout/*": ["Source/Layout/*"],
 			"@Library/*": ["Source/Library/*"],
 			"@Option/*": ["Source/Option/*"],
 			"@Page/*": ["Source/pages/*"],
