--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"type": "git",
 		"url": "git+https://github.com/SouqRs/souq.dev.git"
 	},
+	"license": "MIT",
 	"scripts": {
 		"prepublishOnly": "astro check && astro build",
 		"start": "astro dev"
