--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
 		"paths": {
 			"@Asset/*": ["Source/Asset/*"],
 			"@Component/*": ["Source/Component/*"],
+			"@Context/*": ["Source/Context/*"],
+			"@Element/*": ["Source/Element/*"],
 			"@Layout/*": ["Source/Layout/*"],
 			"@Library/*": ["Source/Library/*"],
 			"@Option/*": ["Source/Option/*"],
@@ -12,7 +14,6 @@
 			"@Script/*": ["Source/Script/*"],
 			"@Style/*": ["Source/Style/*"]
 		},
-
 		"types": ["astro/client", "astro/client-image", "astro/env"]
 	},
 	"extends": "typescript-esbuild/Target/Configuration/TypeScript"
